ingress/nginx/ingress-with-helm-wordpress/wordpress-deploy-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
        - name: wordpress
          image: wordpress:latest
          resources:
            limits:
              memory: "64Mi"
              cpu: "250m"
            requests:
              memory: "32Mi"
              cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-service
  namespace: default
spec:
  type: LoadBalancer
  selector:
    app: wordpress
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
